layout issues fixes

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -146,16 +146,3 @@
 ion-card:last-child {
   margin: 0px;
 }
-
-.no-entry {
-  margin-top: 200px;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  label {
-    color: #908989;
-    font-size: 16px;
-  }
-}
